--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <h1>I am a <span class="multitext"></span></h1>
                     <p>Tech enthusiast specializing in Cloud Computing with a passion for designing</p>
                     <div class="btn">
-                        <button>Download CV</button>
+                        <button href="Resume.pdf">Download CV</button>
                         <a href="https://linktr.ee/maybetarun" target="_blank"><button>Linktree</button></a>
                     </div>
                 </div>
