--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 
 </head>
 <body>
+
+  <div class="overlay" id="overlay">
+    <p>This website is best viewed on a larger screen. So please open it on a desktop ;&rpar;</p>
+  </div>
+
     <header>
         <div class="navbar">
             <nav>
@@ -32,8 +37,8 @@
                     <h1>I am a <span class="multitext"></span></h1>
                     <p>Tech enthusiast specializing in Cloud Computing with a passion for designing</p>
                     <div class="btn">
-                        <a href="Resume.pdf" target="_blank"><button>Resume</button></a>
-                        <a href="https://linktr.ee/maybetarun" target="_blank"><button>Linktree</button></a>
+                      <a href="Resume.pdf" target="_blank"><button>Resume</button></a>
+                      <a href="https://linktr.ee/maybetarun" target="_blank"><button>Linktree</button></a>
                     </div>
                 </div>
                 <div class="main col1">
@@ -75,17 +80,17 @@
             <button class="ss2">s</button>
         </div>
         <div class="skillcard">
-            <div class="skillhead">Hard Skills</div>
+            <div class="skillhead">Technical Skills</div>
             <div class="skillbody">
               <div class="skillinfo">
-                <div class="skillname" data-tooltip="Python,    Java,    C++">Programming Languages</div>
+                <div class="skillname" data-tooltip="Python, C++">Programming Languages</div>
                 <div class="skilllevel">
-                  <div class="skillpercent" style="width: 70%"></div>
+                  <div class="skillpercent" style="width: 64%"></div>
                 </div>
                 <div class="skillpercentnumber">64%</div>
               </div>
               <div class="skillinfo">
-                <div class="skillname" data-tooltip="HTML,    CSS,    Javascript">Web Development</div>
+                <div class="skillname" data-tooltip="HTML,    CSS,    Javascript, Tailwind, Bootstrap">Web Development</div>
                 <div class="skilllevel">
                   <div class="skillpercent" style="width: 72%"></div>
                 </div>
@@ -129,6 +134,40 @@
             </div>
           </div>
           <button class="hoverr">Hover them</button>
+
+          <div class="skillcard2">
+            <div class="skillhead2">Soft Skills</div>
+            <div class="skillbody2">
+              <div class="skillinfo2">
+                <div class="skillname2">Logistics</div>
+                <div class="skilllevel2">
+                  <div class="skillpercent2" style="width: 75%"></div>
+                </div>
+                <div class="skillpercentnumber2">75%</div>
+              </div>
+              <div class="skillinfo2">
+                <div class="skillname2">Problem Solving</div>
+                <div class="skilllevel2">
+                  <div class="skillpercent2" style="width: 80%"></div>
+                </div>
+                <div class="skillpercentnumber2">80%</div>
+              </div>
+              <div class="skillinfo2">
+                <div class="skillname2">Leadership</div>
+                <div class="skilllevel2">
+                  <div class="skillpercent2" style="width: 68%"></div>
+                </div>
+                <div class="skillpercentnumber2">68%</div>
+              </div>
+              <div class="skillinfo2">
+                <div class="skillname2">Communication</div>
+                <div class="skilllevel2">
+                  <div class="skillpercent2" style="width: 65%"></div>
+                </div>
+                <div class="skillpercentnumber2">65%</div>
+              </div>
+            </div>
+          </div>
     </section>
 
     <section id= "works" class="works">
@@ -139,6 +178,13 @@
         <button class="wk">k</button>
         <button class="ws">s</button>
     </div>
+
+    <div class="slider">
+      <div class="slidercard"></div>
+      <div class="slidercard"></div>
+      <div class="slidercard"></div>
+    </div>
+
     </section>
 
     <section id= "contact" class="contact">
@@ -171,7 +217,7 @@
     </div>
   </section>
 
-  <a href="#"><button class="totop">↑</button></a>
+  <a href="#"><button class="totop" id="totop">↑</button></a>
 
   <div class="circle"></div>
   <div class="circle"></div>
@@ -183,7 +229,6 @@
   <div class="circle"></div>
   <div class="circle"></div>
   <div class="circle"></div>
-
     
     <script type="module" src="./script.js"></script>
     <script src="https://unpkg.com/typed.js@2.0.132/dist/typed.umd.js"></script>
