--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <button class="ae">e</button>
         </div>
         <p>
-          I'm Tarun Gupta, a fourth-semester Computer Science student at <a href="https://www.bennett.edu.in/" target="_blank"> Bennett University, India</a>, with a passion for web development and creative designing. With my involvement in numerous <a href="https://www.linkedin.com/in/maybetarun/details/experience/" target="_blank">campus clubs</a>, I have gained experience in problem solving, leadership, and teamwork. I'm always looking for new things to learn. In my opinion, my technical and design skills, combined with my problem-solving ability, makes me a strong contender for any team. I'm excited to put my knowledge and skills to use and contribute to the field of web development.
+          I'm Tarun Gupta, a sixth-sem Computer Science student at <a href="https://www.bennett.edu.in/" target="_blank"> Bennett University, India</a>, with a passion for web development and creative designing. With my involvement in numerous <a href="https://www.linkedin.com/in/maybetarun/details/experience/" target="_blank">campus clubs</a>, I have gained experience in problem solving, leadership, and teamwork. I'm always looking for new things to learn. In my opinion, my technical and design skills, combined with my problem-solving ability, makes me a strong contender for any team. I'm excited to put my knowledge and skills to use and contribute to the field of web development.
         </p>
         <div class="talk">
             <a href="http://wa.me/+919899333577" target="_blank"><button><span>Let's Talk</span></button></a>
