--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="bread.ico">
     <title>Tarun Gupta</title>
     <link rel="stylesheet" href="style.css">
 
@@ -44,7 +45,7 @@
                 <div class="main col1">
                     <div class="imgbox">
                         <img src="splash.svg" id="splash">
-                        <img src="me.png">
+                        <img class='me' src="me.png">
                     </div>
                 </div>
             </div>
@@ -63,10 +64,19 @@
             <button class="ae">e</button>
         </div>
         <p>
-          I'm Tarun Gupta, a sixth-sem Computer Science student at <a href="https://www.bennett.edu.in/" target="_blank"> Bennett University, India</a>, with a passion for web development and creative designing. With my involvement in numerous <a href="https://www.linkedin.com/in/maybetarun/details/experience/" target="_blank">campus clubs</a>, I have gained experience in problem solving, leadership, and teamwork. I'm always looking for new things to learn. In my opinion, my technical and design skills, combined with my problem-solving ability, makes me a strong contender for any team. I'm excited to put my knowledge and skills to use and contribute to the field of web development.
+          Hey! I am a passionate Software Developer who builds websites mostly. I can transform your vivid ideas into pixel perfect realities. From basic web pages to cool looking websites, I will conjure your vision into a digital masterpiece. Not only websites, I can also solve all your problems via coding of course. 
+          I usually make websites and softwares but you can hire me to come to your birthday party as well😉
+          <br>
+          - Knows HTML5, CSS3, JavaScript, React, MySQL, PHP and AWS (For Web Dev)
+          <br>
+          - Knows Python, C++, Java (For Software Dev)
+          <br>
+          - Knows Kotlin, XML, Android Studio (For App Dev)
+          <br>
+          - Knows UI/UX Designing
         </p>
         <div class="talk">
-            <a href="http://wa.me/+919899333577" target="_blank"><button><span>Let's Talk</span></button></a>
+            <a href="https://www.upwork.com/freelancers/~01993e267b8aac12fd" target="_blank"><button><span>Hire Me</span></button></a>
         </div>
     </section>
 
@@ -83,14 +93,14 @@
             <div class="skillhead">Technical Skills</div>
             <div class="skillbody">
               <div class="skillinfo">
-                <div class="skillname" data-tooltip="Python, C++">Programming Languages</div>
+                <div class="skillname" data-tooltip="Python, C++, Java">Programming Languages</div>
                 <div class="skilllevel">
                   <div class="skillpercent" style="width: 64%"></div>
                 </div>
                 <div class="skillpercentnumber">64%</div>
               </div>
               <div class="skillinfo">
-                <div class="skillname" data-tooltip="HTML,    CSS,    Javascript, Tailwind, Bootstrap">Web Development</div>
+                <div class="skillname" data-tooltip="Javascript, React.js, Tailwind, Bootstrap">Web Development</div>
                 <div class="skilllevel">
                   <div class="skillpercent" style="width: 72%"></div>
                 </div>
@@ -104,7 +114,7 @@
                 <div class="skillpercentnumber">56%</div>
               </div>
               <div class="skillinfo">
-                <div class="skillname" data-tooltip="MySQL">RDBMS</div>
+                <div class="skillname" data-tooltip="MySQL, MongoDB">DBMS</div>
                 <div class="skilllevel">
                   <div class="skillpercent" style="width: 45%"></div>
                 </div>
@@ -133,10 +143,10 @@
               </div>
             </div>
           </div>
-          <button class="hoverr">Hover them</button>
+          <button class="hoverr">Hover over</button>
 
           <div class="skillcard2">
-            <div class="skillhead2">Soft Skills</div>
+            <div class="skillhead2">Misc. Skills</div>
             <div class="skillbody2">
               <div class="skillinfo2">
                 <div class="skillname2">Logistics</div>
@@ -160,7 +170,7 @@
                 <div class="skillpercentnumber2">68%</div>
               </div>
               <div class="skillinfo2">
-                <div class="skillname2">Communication</div>
+                <div class="skillname2">Badminton</div>
                 <div class="skilllevel2">
                   <div class="skillpercent2" style="width: 65%"></div>
                 </div>
@@ -180,9 +190,10 @@
     </div>
 
     <div class="slider">
-      <div class="slidercard"></div>
-      <div class="slidercard"></div>
-      <div class="slidercard"></div>
+      <a href="https://maybetarun.github.io/CognifyWebsite.github.io/" target="_blank"><div class="slidercard"><img src="Cognify.png"></div></a>
+      <a href="https://maybetarun.github.io/Foresty/" target="_blank"><div class="slidercard"><img src="foresty.png"></div></a>
+      <a href="https://github.com/MaybeTarun/Holostry" target="_blank"><div class="slidercard"><img src="holostry.png"></div></a>
+      <a href="https://github.com/MaybeTarun?tab=repositories" target="_blank"><div class="slidercard"><h2>More Projects...</h2></div></a>
     </div>
 
     </section>
@@ -200,7 +211,7 @@
         <button class="ce">e</button>
       </div>
       <div class="container">
-        <form action="https://formsubmit.co/tarunthegreat2003@gmail.com" target="_blank" method="post">
+        <form action="https://formsubmit.co/tarun234.tg@gmail.com" target="_blank" method="POST">
             <div class="input-wrap">
                 <input type="text" name="name" placeholder="Your Name Here" required>
                 <input type="email" name="email" placeholder="Your Email Here" required>
